--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,10 @@
   font-style: normal;
   font-display: swap;
 }
+
+.panel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  will-change: transform;
+}
