--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
+
+::-webkit-scrollbar {
+  width: 6px;  /* Thinner width */
+  height: 6px; /* For horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(2, 6, 23, 0.5);  /* slate-950 with medium opacity */
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    to bottom,
+    rgba(30, 64, 175, 0.5),   /* blue-700 */
+rgba(107, 33, 168, 0.5),  /* purple-800 */
+rgba(157, 23, 77, 0.5)    /* pink-800 */
+  );
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(
+    to bottom,
+    rgba(30, 64, 175, 0.5),   /* blue-700 */
+    rgba(107, 33, 168, 0.5),  /* purple-800 */
+    rgba(157, 23, 77, 0.5)    /* pink-800 */
+  );
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(2, 6, 23, 0.5) rgba(15, 23, 42, 0.3);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 @font-face {
   font-family: "CsCreoMonoRegular";
   src: url("/fonts/CsCreoMonoRegularDemo-R9X7A.otf") format("opentype");
